<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_atm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_500"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="@string/format_you_are_now_at" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_screen_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prompt_deposit"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/proceed" />

        </LinearLayout>

    </LinearLayout>

</layout>
