<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_screen_content">

            <ImageView
                android:id="@+id/iv_app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.husseinelfeky.smartbank.widget.EditField
                android:id="@+id/ef_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/iv_app_icon" />

            <com.husseinelfeky.smartbank.widget.EditField
                android:id="@+id/ef_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/ef_email" />

            <com.husseinelfeky.smartbank.widget.LoadingButton
                android:id="@+id/btn_log_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/log_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ef_password"
                app:layout_constraintWidth_percent=".7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
