<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clipToPadding="false"
            android:padding="@dimen/padding_screen_content">

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/format_welcome" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardElevation="4dp"
                app:contentPadding="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/available_balance"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_balance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        tools:text="@string/format_currency" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/header_transactions"
                layout="@layout/layout_header_transactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/cv_balance" />

            <include
                android:id="@+id/layout_no_transactions"
                layout="@layout/layout_no_transactions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/rv_transactions_history"
                app:layout_constraintTop_toTopOf="@id/rv_transactions_history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_transactions_history"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/tv_quick_actions"
                app:layout_constraintTop_toBottomOf="@id/header_transactions"
                tools:itemCount="4"
                tools:listitem="@layout/item_transaction_record" />

            <TextView
                android:id="@+id/tv_quick_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/quick_actions"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btn_withdraw" />

            <Button
                android:id="@+id/btn_withdraw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/withdraw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_deposit"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_deposit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/deposit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_withdraw" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
