<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph_main"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.husseinelfeky.smartbank.ui.login.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.husseinelfeky.smartbank.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_withdrawFragment"
            app:destination="@id/withdrawFragment">
            <argument
                android:name="atm"
                app:argType="com.husseinelfeky.smartbank.model.Atm" />
        </action>
        <action
            android:id="@+id/action_homeFragment_to_depositFragment"
            app:destination="@id/depositFragment">
            <argument
                android:name="atm"
                app:argType="com.husseinelfeky.smartbank.model.Atm" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/withdrawFragment"
        android:name="com.husseinelfeky.smartbank.ui.transaction.withdraw.WithdrawFragment"
        android:label="@string/label_withdraw"
        tools:layout="@layout/fragment_withdraw">
        <argument
            android:name="atm"
            app:argType="com.husseinelfeky.smartbank.model.Atm" />
        <action
            android:id="@+id/action_withdrawFragment_to_qrCodeScannerFragment"
            app:destination="@id/qrCodeScannerFragment">
            <argument
                android:name="atm"
                app:argType="com.husseinelfeky.smartbank.model.Atm" />
            <argument
                android:name="transactionType"
                app:argType="com.husseinelfeky.smartbank.model.TransactionType" />
            <argument
                android:name="amount"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/depositFragment"
        android:name="com.husseinelfeky.smartbank.ui.transaction.deposit.DepositFragment"
        android:label="@string/label_deposit"
        tools:layout="@layout/fragment_deposit">
        <argument
            android:name="atm"
            app:argType="com.husseinelfeky.smartbank.model.Atm" />
        <action
            android:id="@+id/action_depositFragment_to_qrCodeScannerFragment"
            app:destination="@id/qrCodeScannerFragment">
            <argument
                android:name="atm"
                app:argType="com.husseinelfeky.smartbank.model.Atm" />
            <argument
                android:name="transactionType"
                app:argType="com.husseinelfeky.smartbank.model.TransactionType" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/qrCodeScannerFragment"
        android:name="com.husseinelfeky.smartbank.ui.qrcode.QrCodeScannerFragment"
        tools:layout="@layout/fragment_qr_code_scanner">
        <argument
            android:name="atm"
            app:argType="com.husseinelfeky.smartbank.model.Atm" />
        <argument
            android:name="transactionType"
            app:argType="com.husseinelfeky.smartbank.model.TransactionType" />
        <argument
            android:name="amount"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_qrCodeScannerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/qrCodeScannerFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_qrCodeScannerFragment_to_otpVerificationFragment"
            app:destination="@id/otpVerificationFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="qrCode"
                app:argType="com.husseinelfeky.smartbank.model.QrCode" />
            <argument
                android:name="atm"
                app:argType="com.husseinelfeky.smartbank.model.Atm" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/otpVerificationFragment"
        android:name="com.husseinelfeky.smartbank.ui.otpverification.OtpVerificationFragment"
        android:label="@string/label_otp_verification"
        tools:layout="@layout/fragment_otp_verification">
        <argument
            android:name="qrCode"
            app:argType="com.husseinelfeky.smartbank.model.QrCode" />
        <argument
            android:name="atm"
            app:argType="com.husseinelfeky.smartbank.model.Atm" />
        <action
            android:id="@+id/action_otpVerificationFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/otpVerificationFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_otpVerificationFragment_to_enterDepositFragment"
            app:destination="@id/enterDepositFragment"
            app:popUpTo="@id/otpVerificationFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="atm"
                app:argType="com.husseinelfeky.smartbank.model.Atm" />
            <argument
                android:name="qrCode"
                app:argType="com.husseinelfeky.smartbank.model.QrCode" />
        </action>
        <action
            android:id="@+id/action_otpVerificationFragment_to_transactionCompleteFragment"
            app:destination="@id/transactionCompleteFragment"
            app:popUpTo="@id/otpVerificationFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="transactionRecord"
                app:argType="com.husseinelfeky.smartbank.model.TransactionRecord" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/enterDepositFragment"
        android:name="com.husseinelfeky.smartbank.ui.enterdeposit.EnterDepositFragment"
        android:label="@string/label_enter_deposit"
        tools:layout="@layout/fragment_enter_deposit">
        <argument
            android:name="atm"
            app:argType="com.husseinelfeky.smartbank.model.Atm" />
        <argument
            android:name="qrCode"
            app:argType="com.husseinelfeky.smartbank.model.QrCode" />
        <action
            android:id="@+id/action_enterDepositFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/enterDepositFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_enterDepositFragment_to_transactionCompleteFragment"
            app:destination="@id/transactionCompleteFragment"
            app:popUpTo="@id/enterDepositFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="transactionRecord"
                app:argType="com.husseinelfeky.smartbank.model.TransactionRecord" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/transactionCompleteFragment"
        android:name="com.husseinelfeky.smartbank.ui.transactioncompletion.TransactionCompleteFragment"
        android:label="@string/label_transaction_complete"
        tools:layout="@layout/fragment_transaction_complete">
        <argument
            android:name="transactionRecord"
            app:argType="com.husseinelfeky.smartbank.model.TransactionRecord" />
        <action
            android:id="@+id/action_transactionCompleteFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/transactionCompleteFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
